--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,12 @@ repositories {
 }
 
 dependencies {
+	implementation group: 'com.auth0', name: 'java-jwt', version: '3.16.0'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+	implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
