feat : 커스텀 예외처리 기능 구현 + 경기 신청 기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,6 +34,14 @@ jwt:
     expiration: 1209600000
     header: Authorization-refresh
 
+apple:
+  key-url: https://appleid.apple.com/auth/keys
+
+oauth:
+  android-client-id: ${ANDROID_OAUTH_CLIENT_KEY}
+  ios-client-id: ${IOS_OAUTH_CLIENT_KEY}
+
+
 server:
   tomcat:
     threads:
