--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,12 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	implementation 'com.google.oauth-client:google-oauth-client:1.34.0'
+	implementation 'com.google.api-client:google-api-client:2.0.0'
+	implementation 'com.google.http-client:google-http-client-jackson2:1.40.1'
+
+	implementation 'com.nimbusds:nimbus-jose-jwt:9.31'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
