--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,10 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
 
-  sql:
-    init:
-      mode: always
-      data-locations: classpath:data.sql
+#  sql:
+#    init:
+#      mode: always
+#      data-locations: classpath:data.sql
   data:
     mongodb:
       uri: ${MONGO_DB_URL}
@@ -24,7 +24,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       database-platform: org.hibernate.dialect.MySQLDialect
       defer-datasource-initialization: true
     properties:
@@ -57,6 +57,11 @@ oauth:
   android-client-id: ${ANDROID_OAUTH_CLIENT_KEY}
   ios-client-id: ${IOS_OAUTH_CLIENT_KEY}
 
+domain:
+  websocket:
+    game: /game
+    publish: /pub
+    subscribe: /sub
 
 server:
   tomcat:
