--- a/run_core/src/test/resources/application-test.yml
+++ b/run_core/src/test/resources/application-test.yml
@@ -8,7 +8,7 @@ spring:
       force: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${DB_URL}
+    url: ${DB_TEST_URL}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
 
@@ -16,12 +16,12 @@ spring:
   data:
     mongodb:
       uri: ${MONGO_DB_URL}
-      database: ${MONGO_DB_NAME}
+      database: ${MONGO_TEST_DB_NAME}
       auto-index-creation: true
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
       database-platform: org.hibernate.dialect.MySQLDialect
       defer-datasource-initialization: true
     properties:
