--- a/run_api/build.gradle
+++ b/run_api/build.gradle
@@ -16,13 +16,13 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     implementation 'com.nimbusds:nimbus-jose-jwt:9.31'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+    implementation 'jakarta.servlet:jakarta.servlet-hyper.run.api:6.0.0'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-hyper.run.api:0.11.2'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-hyper.run.api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
