--- a/run_api/build.gradle
+++ b/run_api/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'org.springframework.boot' version '3.5.3'
+    id 'io.spring.dependency-management' version '1.1.7'
     id 'java'
 }
 
@@ -7,6 +9,11 @@ version '0.0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
+}
+
+bootJar {
+    enabled = true
+    archiveFileName = "run-api-0.0.1-SNAPSHOT.jar"
 }
 
 dependencies {
