--- a/run_core/src/main/resources/application.yml
+++ b/run_core/src/main/resources/application.yml
@@ -36,9 +36,9 @@ redis:
   port: 6379
 
 aligo:
-  user-id: your_aligo_id
-  api-key: your_aligo_api_key
-  sender: 01012345678   # 발신자 번호 (사전 등록된 번호여야 함)
+  user-id: funyrun
+  api-key: f09xfl65p6qd89d88mew0byjjm4rnekk
+  sender: 1844-1080   # 발신자 번호 (사전 등록된 번호여야 함)
 
 jwt:
   secretKey: ${JWT_KEY}
@@ -61,6 +61,8 @@ domain:
     game: /game
     publish: /pub
     subscribe: /sub
+
+
 
 server:
   tomcat:
