--- a/run_core/build.gradle
+++ b/run_core/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.5.3'
+    id "com.google.protobuf" version "0.9.4"
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -9,8 +10,23 @@ sourceSets {
         java {
             srcDirs = ['src/main/java']
         }
+        proto {
+            srcDir 'src/main/proto'
+        }
     }
 }
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.24.0"
+    }
+    generateProtoTasks {
+        all()*.builtins {
+            java {}
+        }
+    }
+}
+
 
 group = 'hyper'
 version = '0.0.1-SNAPSHOT'
@@ -32,6 +48,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.google.protobuf:protobuf-java:3.24.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
