--- a/run_core/build.gradle
+++ b/run_core/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'com.google.oauth-client:google-oauth-client:1.34.0'
-    implementation 'com.google.hyper.run.api-client:google-hyper.run.api-client:2.0.0'
+    implementation 'com.google.api-client:google-api-client:2.0.0'
     implementation 'com.google.http-client:google-http-client-jackson2:1.40.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
