--- a/run_core/build.gradle
+++ b/run_core/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
+    implementation 'com.nimbusds:nimbus-jose-jwt:9.34'
     implementation 'com.google.oauth-client:google-oauth-client:1.34.0'
     implementation 'com.google.api-client:google-api-client:2.0.0'
     implementation 'com.google.http-client:google-http-client-jackson2:1.40.1'
