--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,28 @@ services:
     image: minseok1768/run_api
     container_name: funy-run-api
     environment:
+      SPRING_PROFILES_ACTIVE: default
       JAVA_TOOL_OPTIONS: "-Dreactor.schedulers.defaultBoundedElasticSize=200"
     env_file:
       - .env
     ports:
       - "8080:8080"
+    restart: always
+    networks:
+      - basic
+    depends_on:
+      - redis
+
+  admin-server:
+    image: minseok1768/run_admin
+    container_name: funy-run-admin
+    environment:
+      JAVA_TOOL_OPTIONS: "-Dreactor.schedulers.defaultBoundedElasticSize=200"
+      SERVER_PORT: 8081
+    env_file:
+      - .env
+    ports:
+      - "8081:8081"
     restart: always
     networks:
       - basic
