--- a/run_admin/build.gradle
+++ b/run_admin/build.gradle
@@ -9,6 +9,11 @@ repositories {
     mavenCentral()
 }
 
+bootJar {
+    enabled = true
+    archiveFileName = "run-admin-0.0.1-SNAPSHOT.jar"
+}
+
 dependencies {
     implementation project(':run_core')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -22,9 +27,6 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-
-
-
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
