--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -18,19 +19,19 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: Build run_admin jar
-        run: ./gradlew :run_admin:bootJar
-
-      - name: Build run_api Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/run_admin:latest ./run_api
-
       - name: Build run_api jar
         run: ./gradlew :run_api:bootJar
+
+      - name: Build run_admin jar
+          run: ./gradlew :run_admin:bootJar
 
       - name: Build run_api Docker image
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/run_api:latest ./run_api
+
+      - name: Build run_admin Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/run_admin:latest ./run_admin
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -38,11 +39,11 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push run_admin image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/run_admin:latest
-
       - name: Push run_api image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/run_api:latest
+
+      - name: Push run_admin image
+          run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/run_admin:latest
 
       - name: Create .env file from secrets
         run: |
@@ -62,7 +63,7 @@ jobs:
           echo "ALIGO_SENDER=${{ secrets.ALIGO_SENDER }}" >> .env
           echo "AWS_S3_ACCESS_KEY=${{ secrets.AWS_S3_ACCESS_KEY }}" >> .env
           echo "AWS_S3_SECRET_KEY=${{ secrets.AWS_S3_SECRET_KEY }}" >> .env
-          
+
 
       - name: Upload .env to EC2
         uses: appleboy/scp-action@v0.1.4
