feat : jenkins 배포
# Conflicts:
#	docker-compose-local.yml
#	run_admin/Dockerfile
#	start.sh

--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -1,10 +1,25 @@
 
 services:
+  mysql:
+    image: mysql:8.0
+    container_name: admin-mysql
+    restart: always
+    ports:
+      - "3306:3306"
+    env_file:
+      - .env.admin
+    environment:
+      MYSQL_ROOT_HOST: '%'
+    networks:
+      - basic
+    volumes:
+      - mysql-data:/var/lib/mysql
+
   api-server:
     build: ./run_api
     container_name: funy-run-api
     environment:
-      SPRING_PROFILES_ACTIVE: default
+      SPRING_PROFILES_ACTIVE: docker
       JAVA_TOOL_OPTIONS: "-Dreactor.schedulers.defaultBoundedElasticSize=200"
     env_file:
       - .env
@@ -18,20 +33,18 @@ services:
 
   admin-server:
     build: ./run_admin
-    container_name: funy-run-admin
+    container_name: funny-run-admin-api
     environment:
-      SPRING_PROFILES_ACTIVE: admin
-      SERVER_PORT: 8081
-      JAVA_TOOL_OPTIONS: "-Dreactor.schedulers.defaultBoundedElasticSize=200"
+      SPRING_PROFILES_ACTIVE: docker
     env_file:
-      - .env
+      - .env.admin
     ports:
-      - "8081:8081"
+      - "8081:8080"
     restart: always
     networks:
       - basic
     depends_on:
-      - redis
+      - mysql
 
   redis:
     image: redis:7.2
@@ -45,3 +58,5 @@ services:
 networks:
   basic:
     driver: bridge
+volumes:
+  mysql-data:
