--- a/run_admin/build.gradle
+++ b/run_admin/build.gradle
@@ -8,6 +8,10 @@ version '0.0.1-SNAPSHOT'
 repositories {
     mavenCentral()
 }
+bootJar {
+    enabled = true
+    archiveFileName = "run-admin-0.0.1-SNAPSHOT.jar"
+}
 
 bootJar {
     enabled = true
