--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,7 +1,7 @@
 FROM jenkins/jenkins:lts
 USER root
 
-# Docker CLI 설치
+# 🔧 Docker CLI + Git + OpenJDK 17 설치
 RUN apt-get update && \
     apt-get install -y ca-certificates curl gnupg lsb-release && \
     mkdir -p /etc/apt/keyrings && \
@@ -9,7 +9,12 @@ RUN apt-get update && \
     echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] \
     https://download.docker.com/linux/debian $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null && \
     apt-get update && \
-    apt-get install -y docker-ce-cli git && \
-    apt-get clean
+    apt-get install -y docker-ce-cli git openjdk-17-jdk && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+# 🔧 JAVA_HOME 환경변수 등록
+ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+ENV PATH="$JAVA_HOME/bin:${PATH}"
 
 USER jenkins
