--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,20 +1,17 @@
-FROM jenkins/jenkins:lts
+
+FROM jenkins/jenkins:lts-jdk17
 USER root
 
-# Docker CLI + Git + OpenJDK 17 설치
 RUN apt-get update && \
     apt-get install -y ca-certificates curl gnupg lsb-release && \
     mkdir -p /etc/apt/keyrings && \
     curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg && \
     echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] \
-    https://download.docker.com/linux/debian $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null && \
+    https://download.docker.com/linux/debian $(lsb_release -cs) stable" \
+    | tee /etc/apt/sources.list.d/docker.list > /dev/null && \
     apt-get update && \
-    apt-get install -y docker-ce-cli git openjdk-17-jdk && \
+    apt-get install -y docker-ce-cli git && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
-
-# JAVA_HOME 설정 (17)
-ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
-ENV PATH="$JAVA_HOME/bin:${PATH}"
 
 USER jenkins
