refactor : jenkins 배포 진행중

--- a/jenkins/docker-compose-jenkins.yml
+++ b/jenkins/docker-compose-jenkins.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    user: root
     container_name: jenkins
     ports:
       - "9000:8080"
