refactor : jenkins 배포 진행중

--- a/jenkins/docker-compose-jenkins.yml
+++ b/jenkins/docker-compose-jenkins.yml
@@ -3,8 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      args:
-        DOCKER_GID: 20
+    user: root
     container_name: jenkins
     ports:
       - "9000:8080"
