--- a/jenkins/docker-compose-jenkins.yml
+++ b/jenkins/docker-compose-jenkins.yml
@@ -9,9 +9,9 @@ services:
       - "9000:8080"
       - "50000:50000"
     volumes:
-      - jenkins_admin:/var/jenkins_home
+      - jenkins_hyper:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
 
 volumes:
-  jenkins_admin:
+  jenkins_hyper:
