--- a/jenkins/JenkinsFile
+++ b/jenkins/JenkinsFile
@@ -56,6 +56,7 @@ echo "[2/4] prepare dir on remote"
 ssh -i "$SSH_KEY" -o IdentitiesOnly=yes -o StrictHostKeyChecking=no "$USER@$HOST" '
     set -e
     mkdir -p /home/ubuntu/app
+    sudo chown -R ubuntu:ubuntu /home/ubuntu/app
     ls -ld /home/ubuntu/app
 '
 
