--- a/docker-compose-admin.yml
+++ b/docker-compose-admin.yml
@@ -4,7 +4,7 @@ services:
   image: brian506/run_admin:1.0.3
   container_name: admin-api
   env_file:
-    - .env
+    - .env.admin
   ports:
     - "8081:8080"
   restart: always
