refactor : jenkins 배포 진행중

--- a/.env.admin
+++ b/.env.admin
@@ -12,3 +12,4 @@ RDS_PASSWORD=sin981023
 REDIS_HOST=redis
 ANDROID_OAUTH_CLIENT_KEY=534614865028-ac4k62rdj4qcu66lavf4cjd2q97q31k5.apps.googleusercontent.com
 IOS_OAUTH_CLIENT_KEY=534614865028-su1rmf9nmpqlvuhn0o1k1fl67vksgca9.apps.googleusercontent.com
+CLOUD_AWS_S3_ENABLED=false
