--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -16,22 +16,22 @@ services:
     depends_on:
       - redis
 
-  admin-server:
-    build: ./run_admin
-    container_name: funy-run-admin
-    environment:
-      SPRING_PROFILES_ACTIVE: admin
-      SERVER_PORT: 8081
-      JAVA_TOOL_OPTIONS: "-Dreactor.schedulers.defaultBoundedElasticSize=200"
-    env_file:
-      - .env
-    ports:
-      - "8081:8081"
-    restart: always
-    networks:
-      - basic
-    depends_on:
-      - redis
+#  admin-server:
+#    build: ./run_admin
+#    container_name: funy-run-admin
+#    environment:
+#      SPRING_PROFILES_ACTIVE: admin
+#      SERVER_PORT: 8081
+#      JAVA_TOOL_OPTIONS: "-Dreactor.schedulers.defaultBoundedElasticSize=200"
+#    env_file:
+#      - .env
+#    ports:
+#      - "8081:8081"
+#    restart: always
+#    networks:
+#      - basic
+#    depends_on:
+#      - redis
 
   redis:
     image: redis:7.2
