--- a/run_core/src/main/resources/application.yml
+++ b/run_core/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
       max-file-size: 10MB
       max-request-size: 10MB
   server:
+    port: 8080
     address: 0.0.0.0
   jackson:
     time-zone: Asia/Seoul
