--- a/run_core/src/main/resources/application.yml
+++ b/run_core/src/main/resources/application.yml
@@ -1,5 +1,22 @@
 
 spring:
+  mail:
+    host: smtp.naver.com
+    port: 465
+    username: funyrun88@naver.com
+    password: a03299!!
+    properties:
+      mail:
+        smtp:
+          auth: true
+          ssl:
+            enable: true
+            trust: smtp.naver.com
+          socketFactory:
+            port: 465
+            class: javax.net.ssl.SSLSocketFactory
+            fallback: false
+
   application:
     name: hyper_run
   servlet:
