--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,16 +22,9 @@ jobs:
       - name: Build run_api jar
         run: ./gradlew :run_api:bootJar
 
-#      - name: Build run_admin jar
-#        run: ./gradlew :run_admin:bootJar
-
       - name: Build run_api Docker image
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/run_api:latest ./run_api
-
-#      - name: Build run_admin Docker image
-#        run: |
-#          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/run_admin:latest ./run_admin
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -41,9 +34,6 @@ jobs:
 
       - name: Push run_api image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/run_api:latest
-
-#      - name: Push run_admin image
-#        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/run_admin:latest
 
       - name: Create .env file from secrets
         run: |
@@ -63,6 +53,7 @@ jobs:
           echo "ALIGO_SENDER=${{ secrets.ALIGO_SENDER }}" >> .env
           echo "AWS_S3_ACCESS_KEY=${{ secrets.AWS_S3_ACCESS_KEY }}" >> .env
           echo "AWS_S3_SECRET_KEY=${{ secrets.AWS_S3_SECRET_KEY }}" >> .env
+          echo "MAIL_PASSWORD=${{ secrets.MAIL_PASSWORD }}" >> .env
 
 
       - name: Upload .env to EC2
