--- a/run_core/build.gradle
+++ b/run_core/build.gradle
@@ -71,6 +71,11 @@ dependencies {
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 
+    // AWS SQS & SNS (Spring Cloud AWS 3.x for Spring Boot 3.x)
+    implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:3.1.0')
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter-sqs'
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter-sns'
+
 }
 
 // [3] Querydsl 설정부
