feat : 경기 순위 계산 로직 수정 및 규칙 문서화

--- a/run_core/src/main/resources/application-prod.yml
+++ b/run_core/src/main/resources/application-prod.yml
@@ -57,6 +57,8 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
         show_sql: false
         format_sql: false
+        jdbc:
+          time_zone: Asia/Seoul
 
   cloud:
     aws:
