--- a/run_admin/build.gradle
+++ b/run_admin/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'org.springframework.boot' version '3.5.3'
+    id 'io.spring.dependency-management' version '1.1.7'
     id 'java'
 }
 
@@ -8,6 +10,7 @@ version '0.0.1-SNAPSHOT'
 repositories {
     mavenCentral()
 }
+
 bootJar {
     enabled = true
     archiveFileName = "run-admin-0.0.1-SNAPSHOT.jar"
@@ -18,11 +21,13 @@ dependencies {
     implementation project(':run_core')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
