--- a/run_core/src/main/resources/application-dev.yml
+++ b/run_core/src/main/resources/application-dev.yml
@@ -35,9 +35,9 @@ spring:
       force: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${DB_RDS_URL}
-    username: ${RDS_USERNAME}
-    password: ${RDS_PASSWORD}
+    url: ${DB_DOCKER_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
 
   data:
     mongodb:
@@ -120,17 +120,24 @@ server:
 
 cloud:
   aws:
+    credentials:
+      access-key: ${AWS_S3_ACCESS_KEY}
+      secret-key: ${AWS_S3_SECRET_KEY}
+    region:
+      static: ap-northeast-2
     s3:
       bucket:
         name: hyper-run-image-dev
-      credentials:
-        access-key: ${AWS_S3_ACCESS_KEY}
-        secret-key: ${AWS_S3_SECRET_KEY}
 
 admin:
   initial:
     email: ${ADMIN_INITIAL_EMAIL}
     password: ${ADMIN_INITIAL_PASSWORD}
+
+logging:
+  level:
+    org.springframework.security: DEBUG
+    hyper.run: DEBUG
 
 
 
