--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,13 @@ jobs:
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/run_api:latest ./run_api
 
+      - name: Build run_admin jar
+        run: ./gradlew :run_admin:bootJar
+
+      - name: Build run_admin Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/run_admin:latest ./run_admin
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -34,6 +41,9 @@ jobs:
 
       - name: Push run_api image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/run_api:latest
+
+      - name: Push run_admin image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/run_admin:latest
 
       - name: Create .env file from secrets
         run: |
