--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,26 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: prod
       JAVA_TOOL_OPTIONS: "-Dreactor.schedulers.defaultBoundedElasticSize=200"
-      # CloudWatch Logs 환경 변수 (기존 S3 키 재사용)
-      AWS_ACCESS_KEY_ID: ${AWS_S3_ACCESS_KEY}
-      AWS_SECRET_ACCESS_KEY: ${AWS_S3_SECRET_KEY}
-      AWS_REGION: ap-northeast-2
     env_file:
       - .env
     ports:
       - "8080:8080"
+    restart: always
+    networks:
+      - basic
+    depends_on:
+      - redis
+
+  admin-server:
+    image: minseok1768/run_admin
+    container_name: funy-run-admin
+    environment:
+      SPRING_PROFILES_ACTIVE: prod
+      JAVA_TOOL_OPTIONS: "-Dreactor.schedulers.defaultBoundedElasticSize=200"
+    env_file:
+      - .env
+    ports:
+      - "8081:8081"
     restart: always
     networks:
       - basic
