--- a/run_core/src/main/resources/application-prod.yml
+++ b/run_core/src/main/resources/application-prod.yml
@@ -3,8 +3,8 @@ spring:
   mail:
     host: smtp.naver.com
     port: 465
-    username: funyrun88@naver.com
-    password: a03299!!
+    username: ${MAIL_SENDER}
+    password: ${MAIL_PASSWORD}
     properties:
       mail:
         smtp:
