--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,6 +98,21 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd /home/ubuntu/funy-run
-            sudo docker-compose down
+
+            # 1. 기존 컨테이너 강제 종료 및 삭제
+            sudo docker-compose down --remove-orphans || true
+            sudo docker rm -f funy-run-api funy-run-admin redis 2>/dev/null || true
+
+            # 2. 포트 점유 프로세스 강제 종료 (8080, 8081)
+            sudo fuser -k 8080/tcp 2>/dev/null || true
+            sudo fuser -k 8081/tcp 2>/dev/null || true
+
+            # 3. 잠시 대기 (포트 해제 시간 확보)
+            sleep 3
+
+            # 4. 새 이미지 pull 및 실행
             sudo docker-compose pull
             sudo docker-compose up -d
+
+            # 5. 미사용 이미지 정리
+            sudo docker image prune -f
