feat : AWS CodeDeploy 설정 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,15 @@
-name: Build, Push and Deploy to EC2
+name: Build, Push and Deploy via CodeDeploy
 
 on:
   push:
     branches:
       - master
+
+env:
+  AWS_REGION: ap-northeast-2
+  S3_BUCKET: funnyrun-deploy-artifacts
+  CODEDEPLOY_APPLICATION: FunnyRun
+  CODEDEPLOY_DEPLOYMENT_GROUP: FunnyRun-DeployGroup
 
 jobs:
   build-and-push:
@@ -45,6 +51,21 @@ jobs:
       - name: Push run_admin image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/run_admin:latest
 
+  deploy-to-ec2:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
       - name: Create .env file from secrets
         run: |
           echo "ACCESS_KEY_EXPIRATION_SECONDS=${{ secrets.ACCESS_KEY_EXPIRATION_SECONDS }}" >> .env
@@ -65,54 +86,24 @@ jobs:
           echo "AWS_S3_SECRET_KEY=${{ secrets.AWS_S3_SECRET_KEY }}" >> .env
           echo "MAIL_PASSWORD=${{ secrets.MAIL_PASSWORD }}" >> .env
 
+      - name: Create deployment artifact
+        run: |
+          mkdir -p deployment
+          cp appspec.yml deployment/
+          cp docker-compose.yml deployment/
+          cp .env deployment/
+          cp -r scripts deployment/
+          cd deployment && zip -r ../deployment.zip .
 
-      - name: Upload .env to EC2
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          source: ./.env
-          target: /home/ubuntu/funy-run/
+      - name: Upload to S3
+        run: |
+          aws s3 cp deployment.zip s3://${{ env.S3_BUCKET }}/deployment-${{ github.sha }}.zip
 
-
-      - name: Upload docker-compose.yml to EC2
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          source: ./docker-compose.yml
-          target: /home/ubuntu/funy-run/
-
-  deploy-to-ec2:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: SSH to EC2 and deploy
-        uses: appleboy/ssh-action@v0.1.7
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            cd /home/ubuntu/funy-run
-
-            # 1. 기존 컨테이너 강제 종료 및 삭제
-            sudo docker-compose down --remove-orphans || true
-            sudo docker rm -f funy-run-api funy-run-admin redis 2>/dev/null || true
-
-            # 2. 포트 점유 프로세스 강제 종료 (8080, 8081)
-            sudo fuser -k 8080/tcp 2>/dev/null || true
-            sudo fuser -k 8081/tcp 2>/dev/null || true
-
-            # 3. 잠시 대기 (포트 해제 시간 확보)
-            sleep 3
-
-            # 4. 새 이미지 pull 및 실행
-            sudo docker-compose pull
-            sudo docker-compose up -d
-
-            # 5. 미사용 이미지 정리
-            sudo docker image prune -f
+      - name: Create CodeDeploy deployment
+        run: |
+          aws deploy create-deployment \
+            --application-name ${{ env.CODEDEPLOY_APPLICATION }} \
+            --deployment-group-name ${{ env.CODEDEPLOY_DEPLOYMENT_GROUP }} \
+            --s3-location bucket=${{ env.S3_BUCKET }},key=deployment-${{ github.sha }}.zip,bundleType=zip \
+            --deployment-config-name CodeDeployDefault.AllAtOnce \
+            --description "Deployment from GitHub Actions - ${{ github.sha }}"
