--- a/run_admin/src/main/resources/application-admin.yml
+++ b/run_admin/src/main/resources/application-admin.yml
@@ -129,7 +129,7 @@ cloud:
       static: ap-northeast-2
     s3:
       bucket:
-        name: hyper-run-image-dev
+        name: hyper-run-image
 
 admin:
   initial:
