feat : 경기 중도 포기 API 제작(가민 워치 전용)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,6 +88,8 @@ jobs:
           echo "MAIL_SENDER=${{ secrets.MAIL_SENDER }}" >> .env
           echo "ADMIN_INITIAL_EMAIL=${{ secrets.ADMIN_INITIAL_EMAIL }}" >> .env
           echo "ADMIN_INITIAL_PASSWORD=${{ secrets.ADMIN_INITIAL_PASSWORD }}" >> .env
+          echo "AWS_SNS_PAYMENT_CREATED_TOPIC_ARN=${{ secrets.AWS_SNS_PAYMENT_CREATED_TOPIC_ARN }}" >> .env
+          echo "AWS_SNS_GAME_FINISHED_TOPIC_ARN=${{ secrets.AWS_SNS_GAME_FINISHED_TOPIC_ARN }}" >> .env
 
       - name: Create deployment artifact
         run: |
