--- a/run_core/src/main/resources/application-prod.yml
+++ b/run_core/src/main/resources/application-prod.yml
@@ -135,7 +135,7 @@ cloud:
 
 google:
   play:
-    package-name: ${GOOGLE_PLAY_PACKAGE_NAME:com.hyper.funyrun}
+    package-name: ${GOOGLE_PLAY_PACKAGE_NAME:com.funyrun.app}
     service-account-key-path: ${GOOGLE_PLAY_SERVICE_ACCOUNT_KEY_PATH:s3://funny-run-secrets/funyrun-7d716a03e6f6.json}
     enabled: ${GOOGLE_PLAY_ENABLED:true}
 
