feat : 인앱결제 GOOGLE 영수증 검증 추가

--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,4 @@ out/
 
 ### Java heap dumps ###
 *.hprof
-run_core/src/main/resources/funyrun-*.json
+run_core/src/main/resources/funyrun-7d716a03e6f6.json
