--- a/run_admin/src/main/resources/application-admin-prod.yml
+++ b/run_admin/src/main/resources/application-admin-prod.yml
@@ -145,7 +145,7 @@ logging:
 
 google:
   play:
-    package-name: ${GOOGLE_PLAY_PACKAGE_NAME:com.hyper.funyrun}
-    service-account-key-path: ${GOOGLE_PLAY_SERVICE_ACCOUNT_KEY_PATH:classpath:funyrun-7d716a03e6f6.json}
-    enabled: ${GOOGLE_PLAY_ENABLED:true}  # JSON 키가 있으므로 true로 설정
+    package-name: ${GOOGLE_PLAY_PACKAGE_NAME:com.funyrun.app}
+    service-account-key-path: ${GOOGLE_PLAY_SERVICE_ACCOUNT_KEY_PATH:s3://funny-run-secrets/funyrun-7d716a03e6f6.json}
+    enabled: ${GOOGLE_PLAY_ENABLED:true}
 
