--- a/run_core/src/main/resources/application-dev.yml
+++ b/run_core/src/main/resources/application-dev.yml
@@ -111,6 +111,7 @@ cloud:
     s3:
       bucket:
         name: hyper-run-image
+      base-url: https://hyper-run-image.s3.ap-northeast-2.amazonaws.com/
     credentials:
       access-key: ${AWS_SQS_ACCESS_KEY:${AWS_S3_ACCESS_KEY}}
       secret-key: ${AWS_SQS_SECRET_KEY:${AWS_S3_SECRET_KEY}}
